# honarino-test

./: Makefile  README.md  docker-compose.yml
.github/workflows/: cd-deploy.yml  ci-build.yml  workflow.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.bak
backend/migrations/: 001_create_users_table.sql
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/application/auth/: mod.rs  service.rs
backend/src/application/traits/: mod.rs  user.rs
backend/src/application/user/: dto.rs  mod.rs  service.rs
backend/src/config/: mod.rs
backend/src/domain/models/: account.rs  auth.rs  mod.rs  user.rs
backend/src/error/: mod.rs
backend/src/infrastructure/: database.rs  mod.rs
backend/src/infrastructure/jwt/: jwt.rs
backend/src/infrastructure/repositories/: mod.rs  user_repository.rs
backend/src/presentation/: mod.rs  routes.rs
backend/src/presentation/handlers/: mod.rs
backend/src/presentation/handlers/account/: handler.rs  mod.rs
backend/src/presentation/handlers/auth/: handler.rs  mod.rs
backend/src/presentation/handlers/user/: handler.rs  mod.rs
backend/src/presentation/middleware/: authentication.rs
config/: .api.env  .frontend.env  .minio.env  .postgres.env
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
k8s/: kustomization.yaml  namespace.yaml
k8s/api/: api-deployment.yaml
k8s/argocd/: argocd-insecure.yaml  ingress.yaml  kustomization.yaml
k8s/frontend/: frontend-deployment.yaml  frontend-service.yaml
k8s/ingress/: argocd-ingress.yaml  ingress.yaml
nginx/: Dockerfile  nginx.conf
(+81 files in other folders)
