[package]
name = "api-clean-architecture"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-native-tls", "sqlx-postgres", "macros"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
dotenv = "0.15"
config = "0.15.19"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1"
tracing = "0.1"
jsonwebtoken = "9"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1"
reqwest = { version = "0.13.1", features = ["json"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.105.0"
aws-sdk-s3 = "1.123.0"
aws-types = "1.3.12"

[dev-dependencies]
tokio-test = "0.4.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
